--- a/src/app/users/components/user/user.component.html
+++ b/src/app/users/components/user/user.component.html
@@ -1,4 +1,5 @@
 <br><button (click)="getUser()">Listar Usuarios</button>
 <section class="container">
     <app-user-form></app-user-form>
+    <app-user-table></app-user-table>
 </section>
