--- a/src/app/users/user-form/user-form.component.html
+++ b/src/app/users/user-form/user-form.component.html
@@ -5,7 +5,7 @@
     <div class="form-input">
         <label for="name">Nome:</label>
         <input id="name" [(ngModel)]="user.name">
-        <button class="filter" (click)="sendFilterName()">Filtrar</button>
+        <button class="filter" (click)="getUsersByName(user.name)">Filtrar</button>
     </div>
 
     <div class="form-input">
@@ -19,10 +19,9 @@
     </div>
 
 
-    <input class="input" type="radio" name="tipo_user" value="Adm" [(ngModel)]="user.roles">Adm
-    <input class="input" type="radio" name="tipo_user" value="User" [(ngModel)]="user.roles">User
+    <input class="input" type="radio" name="tipo_user" value="ADMIN,USER" [(ngModel)]="user.roles">Adm
+    <input class="input" type="radio" name="tipo_user" value="USER" [(ngModel)]="user.roles">User
     <br>
 
     <button class="save" (click)="addUser()">Salvar</button>
-    <app-user-table [users]="users"></app-user-table>
 </div>
