Update Adicioando o restante de Usuarios e Pais

--- a/src/app/menus/components/menu/menu.component.html
+++ b/src/app/menus/components/menu/menu.component.html
@@ -1,1 +1,2 @@
-<a routerLink="/users" routerLinkActive="linkSelected">Get Users</a>
+<a routerLink="/users" routerLinkActive="linkSelected">Get Users</a><br>
+<a routerLink="/paises" routerLinkActive="linkSelected">Get Paises</a>
