--- a/src/app/users/user-form/user-form.component.html
+++ b/src/app/users/user-form/user-form.component.html
@@ -1,6 +1,6 @@
 <div>
 
-    <h1>Cadastro de usuarios</h1>
+    <h1>Cadastro de Usuarios</h1>
 
     <div class="form-input">
         <label for="name">Nome:</label>
