--- a/src/app/users/user-table/user-table.component.html
+++ b/src/app/users/user-table/user-table.component.html
@@ -1,5 +1,5 @@
 <div class="tabela">
-    <table border="1" cellSpacing="0" width="70%">
+    <table border="1" cellSpacing="0" width="80%">
         <tr>
             <th>Nome</th>
             <th>Email</th>
@@ -14,7 +14,7 @@
                 <button class="editar" (click)="setUserselecionado(user)">
                     editar
                 </button>
-                <button class="deletar" (click)="deleteItem(i)">
+                <button class="deletar" (click)="deleteItem(user)">
                     deletar
                 </button>
             </td>
