Adicionando as outras APIs

--- a/src/app/menus/components/menu/menu.component.html
+++ b/src/app/menus/components/menu/menu.component.html
@@ -1,2 +1,3 @@
 <a routerLink="/users" routerLinkActive="linkSelected">Get Users</a><br>
-<a routerLink="/paises" routerLinkActive="linkSelected">Get Paises</a>
+<a routerLink="/paises" routerLinkActive="linkSelected">Get Paises</a><br>
+<a routerLink="/equipes" routerLinkActive="linkSelected">Get Equipes</a><br>
