--- a/src/app/equipes/components/equipe/equipe.component.html
+++ b/src/app/equipes/components/equipe/equipe.component.html
@@ -1,1 +1,4 @@
-<p>equipe works!</p>
+<section class="container">
+    <app-equipe-form></app-equipe-form>
+    <app-equipe-table></app-equipe-table>
+</section>
