--- a/src/app/campeonatos/campeonato-form/campeonato-form.component.html
+++ b/src/app/campeonatos/campeonato-form/campeonato-form.component.html
@@ -1,6 +1,6 @@
 <div>
 
-    <h1>Cadastro de Usuarios</h1>
+    <h1>Cadastro de Campeonatos</h1>
 
     <div class="form-input">
         <label for="name">Nome:</label>
@@ -9,7 +9,7 @@
     </div>
 
     <div class="form-input">
-        <label for="email">E-mail:</label>
+        <label for="email">Ano:</label>
         <input id="email" [(ngModel)]="campeonato.ano">
     </div>
     <br>
