--- a/src/app/campeonatos/components/campeonato/campeonato.component.html
+++ b/src/app/campeonatos/components/campeonato/campeonato.component.html
@@ -1,1 +1,4 @@
-<p>campeonato works!</p>
+<section class="container">
+    <app-campeonato-form></app-campeonato-form>
+    <app-campeonato-table></app-campeonato-table>
+</section>
