--- a/src/app/equipes/equipe-form/equipe-form.component.html
+++ b/src/app/equipes/equipe-form/equipe-form.component.html
@@ -1,6 +1,6 @@
 <div>
 
-    <h1>Cadastro de Euipe</h1>
+    <h1>Cadastro de Equipe</h1>
 
     <div class="form-input">
         <label for="name">Nome:</label>
