--- a/src/app/menus/components/menu/menu.component.html
+++ b/src/app/menus/components/menu/menu.component.html
@@ -1,3 +1,8 @@
-<a routerLink="/users" routerLinkActive="linkSelected">Get Users</a><br>
-<a routerLink="/paises" routerLinkActive="linkSelected">Get Paises</a><br>
-<a routerLink="/equipes" routerLinkActive="linkSelected">Get Equipes</a><br>
+<div id="menu">
+    <ul class="horizontal">
+        <li> <a routerLink="/users" routerLinkActive="linkSelected">Users</a></li>
+        <li> <a routerLink="/paises" routerLinkActive="linkSelected">Paises</a></li>
+        <li><a routerLink="/equipes" routerLinkActive="linkSelected">Equipes</a></li>
+        <li><a routerLink="/campeonatos" routerLinkActive="linkSelected">Campeonatos</a></li>
+    </ul>
+</div>
