--- a/src/app/menus/components/menu/menu.component.html
+++ b/src/app/menus/components/menu/menu.component.html
@@ -4,5 +4,6 @@
         <li> <a routerLink="/paises" routerLinkActive="linkSelected">Paises</a></li>
         <li><a routerLink="/equipes" routerLinkActive="linkSelected">Equipes</a></li>
         <li><a routerLink="/campeonatos" routerLinkActive="linkSelected">Campeonatos</a></li>
+        <li><a routerLink="/pistas" routerLinkActive="linkSelected">Pistas</a></li>
     </ul>
 </div>
