--- a/src/app/campeonatos/campeonato-form/campeonato-form.component.html
+++ b/src/app/campeonatos/campeonato-form/campeonato-form.component.html
@@ -9,8 +9,8 @@
     </div>
 
     <div class="form-input">
-        <label for="email">Ano:</label>
-        <input id="email" [(ngModel)]="campeonato.ano">
+        <label for="ano">Ano:</label>
+        <input id="ano" type="number" [(ngModel)]="campeonato.ano">
     </div>
     <br>
 
