--- a/src/app/menus/components/menu/menu.component.html
+++ b/src/app/menus/components/menu/menu.component.html
@@ -1,11 +1,12 @@
 <div id="menu">
     <ul class="horizontal">
+        <li> <a routerLink="/login" routerLinkActive="linkSelected">Login</a></li>
         <li> <a routerLink="/users" routerLinkActive="linkSelected">Users</a></li>
         <li> <a routerLink="/paises" routerLinkActive="linkSelected">Paises</a></li>
         <li><a routerLink="/equipes" routerLinkActive="linkSelected">Equipes</a></li>
         <li><a routerLink="/campeonatos" routerLinkActive="linkSelected">Campeonatos</a></li>
         <li><a routerLink="/pistas" routerLinkActive="linkSelected">Pistas</a></li>
-        <li><a routerLink="/pilotos" routerLinkActive="linkSelected">Pilotos</a></li>
-        <li><a routerLink="/corridas" routerLinkActive="linkSelected">Corridas</a></li>
+        <!-- <li><a routerLink="/pilotos" routerLinkActive="linkSelected">Pilotos</a></li>
+        <li><a routerLink="/corridas" routerLinkActive="linkSelected">Corridas</a></li> -->
     </ul>
 </div>
