--- a/src/app/login/components/login/login.component.scss
+++ b/src/app/login/components/login/login.component.scss
@@ -1,68 +1,61 @@
 .container {
-  color: #212121;
-  border: 2px solid black;
+  background: #333333;
+  color: #fff;
   border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   height: 350px;
-  width: 600px;
-  scrollbar-width: 5px;
-  text-align: center;
-  margin-top: 70px;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 15px;
+  width: 80%;
+  max-width: 600px;
+  margin: 70px auto;
+  padding: 30px;
+  text-align: left;
+  font-family: Arial, sans-serif;
 }
 
 h1 {
-  margin: 0 0 20px;
-  font-size: 48px;
-  font-weight: 300;
+  font-size: 36px;
+  font-weight: bold;
+  margin-bottom: 20px;
+  color: #fff;
 }
 
 .form-input {
-  outline: none;
-  z-index: 1;
-  position: relative;
-  background: none;
+  margin-bottom: 20px;
+}
+
+label {
+  display: block;
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 5px;
+  color: #fff;
+}
+
+input {
   width: 100%;
-  height: 60px;
-  border: 0;
-  font-size: 24px;
-  font-weight: 400;
+  padding: 10px;
+  font-size: 16px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
 }
 
-.input {
-  font-size: 15px;
+input[type="radio"] {
+  margin-right: 5px;
 }
 
-.save {
-  background-color: white;
-  border-radius: 3px;
-  border: 1px solid #0b0e07;
-  display: inline-block;
-  cursor: pointer;
-  font-family: Arial;
-  font-size: 15px;
-  padding: 9px 23px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  text-decoration: none;
-  text-shadow: 0px 1px 0px #263666;
-}
-
+.save,
 .filter {
-  background-color: rgb(66, 166, 221);
-  color: white;
-  border-radius: 3px;
-  border: 1px solid #0b0e07;
-  display: inline-block;
+  background-color: #04aa6d;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
   cursor: pointer;
-  font-family: Arial;
-  font-size: 15px;
-  margin-bottom: 10px;
-  text-decoration: none;
+  font-size: 16px;
+  padding: 10px 20px;
+  transition: background-color 0.2s;
 }
 
-button:active {
-  position: relative;
-  top: 1px;
+.save:hover,
+.filter:hover {
+  background-color: #048c5b;
 }
