--- a/src/app/pistas/components/pista-form/pista-form.component.scss
+++ b/src/app/pistas/components/pista-form/pista-form.component.scss
@@ -1,58 +1,53 @@
 h1 {
-  margin: 0 0 20px;
-  font-size: 48px;
-  font-weight: 300;
+  color: white;
+  font-size: 36px;
+  font-weight: bold;
+  margin-bottom: 20px;
 }
 
 .form-input {
-  outline: none;
-  z-index: 1;
-  position: relative;
-  background: none;
-  width: 100%;
-  height: 60px;
-  border: 0;
-  font-size: 24px;
-  font-weight: 400;
+  margin-bottom: 20px;
 }
 
 .input {
-  font-size: 15px;
+  font-size: 16px;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
 }
 
 .save {
-  background-color: white;
-  border-radius: 3px;
-  border: 1px solid #0b0e07;
-  display: inline-block;
+  background-color: #04aa6d;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
   cursor: pointer;
-  font-family: Arial;
-  font-size: 15px;
-  padding: 9px 23px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  text-decoration: none;
-  text-shadow: 0px 1px 0px #263666;
+  font-size: 16px;
+  padding: 10px 20px;
+  transition: background-color 0.2s;
 }
 
 .filter {
-  background-color: rgb(66, 166, 221);
-  color: white;
-  border-radius: 3px;
-  border: 1px solid #0b0e07;
-  display: inline-block;
+  background-color: rgb(111, 188, 227);
+  width: 50px;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
   cursor: pointer;
-  font-family: Arial;
-  font-size: 15px;
-  margin-bottom: 10px;
-  text-decoration: none;
+  font-size: 13px;
+  padding: 7px;
+  transition: background-color 0.2s;
+}
+
+.save:hover {
+  background-color: #048c5b;
+}
+
+.filter:hover {
+  background-color: rgb(58, 140, 181);
 }
 
 button:active {
   position: relative;
   top: 1px;
-}
-
-option {
-  font-size: 15px;
 }
