--- a/src/app/menus/components/menu/menu.component.html
+++ b/src/app/menus/components/menu/menu.component.html
@@ -6,7 +6,8 @@
         <li><a routerLink="/equipes" routerLinkActive="linkSelected">Equipes</a></li>
         <li><a routerLink="/campeonatos" routerLinkActive="linkSelected">Campeonatos</a></li>
         <li><a routerLink="/pistas" routerLinkActive="linkSelected">Pistas</a></li>
-        <!-- <li><a routerLink="/pilotos" routerLinkActive="linkSelected">Pilotos</a></li>
-        <li><a routerLink="/corridas" routerLinkActive="linkSelected">Corridas</a></li> -->
+        <li><a routerLink="/pilotos" routerLinkActive="linkSelected">Pilotos</a></li>
+        <li><a routerLink="/corridas" routerLinkActive="linkSelected">Corridas</a></li>
+        <li><a routerLink="/pilotoCorrida" routerLinkActive="linkSelected">Piloto-Corrida</a></li>
     </ul>
 </div>
